Connected UI with backend so it displays jobs currently being done

--- a/backend/src/main/resources/templates/generic.html
+++ b/backend/src/main/resources/templates/generic.html
@@ -52,11 +52,12 @@
 							<div class="inner">
  								<h2>Work being done right now</h2>
  								<hr>
+ 								{{#jobs}}
  								<div class="row">
  								    <div class="col-4">
  										<img src="icons/pers1.png" width="50%" height="50%"></img>
 
- 										<h3 style="width:200px;height:100%;overflow-wrap:break-word;">{{title}} is doing</h3>
+ 										<h3 style="width:200px;height:100%;overflow-wrap:break-word;">{{firstName}} is doing</h3>
  									</div>
  									<div class="col-4">
  										<div class="container">
@@ -72,98 +73,13 @@
 									<div class="col-4">
 									<br>
 
-									 <h3>Gardening</h3>
+									 <h3>{{lastName}}</h3>
 									</div>
  								<!-- <h3> ............................................</h3> -->
  								
  								</div>
+ 								{{/jobs}}
 
-
-
-
- 								<div class="row">
- 								    <div class="col-4">
- 										<img src="icons/pers2.png" width="50%" height="50%"></img>
- 										
- 										<h3>is doing</h3>
- 									</div>
- 									<div class="col-4">
- 										<div class="container">
-								  			<div class="loader">
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								  			</div>
-
-										</div>
-									</div>
-									<div class="col-4">
-									<br>
-
-									 <h3>Construction</h3>
-									</div>
- 								<!-- <h3> ............................................</h3> -->
- 								
- 								</div>
-
-
-
-
- 								<div class="row">
- 								    <div class="col-4">
- 										<img src="icons/pers3.png" width="50%" height="50%"></img>
- 										
- 										<h3>is doing</h3>
- 									</div>
- 									<div class="col-4">
- 										<div class="container">
-								  			<div class="loader">
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								  			</div>
-
-										</div>
-									</div>
-									<div class="col-4">
-									<br>
-
-									 <h3>Landscaping</h3>
-									</div>
- 								<!-- <h3> ............................................</h3> -->
- 								
- 								</div>
-   
-
-
-
-
- 								<div class="row">
- 								    <div class="col-4">
- 										<img src="icons/pers4.png" width="50%" height="50%"></img>
- 										
- 										<h3>is doing</h3>
- 									</div>
- 									<div class="col-4">
- 										<div class="container">
-								  			<div class="loader">
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								    			<div class="circle">&nbsp;</div>
-								  			</div>
-
-										</div>
-									</div>
-									<div class="col-4">
-									<br>
-
-									 <h3>Item Relocation</h3>
-									</div>
- 								<!-- <h3> ............................................</h3> -->
- 								</div>
  								<hr>
 							</div>
 						
