--- a/backend/src/main/resources/templates/leaderboard.html
+++ b/backend/src/main/resources/templates/leaderboard.html
@@ -23,16 +23,16 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">repup</a></h1>
+						<h1><a href="../static/index.html">repup</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Tracking</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="">Home</a></li>
+											<li><a href="tracking">Progress Tracking</a></li>
+											<li><a href="leaderboard">Leaderboard</a></li>
 											<li><a href="#">Sign Up</a></li>
 											<li><a href="#">Log In</a></li>
 										</ul>
@@ -55,20 +55,22 @@
  								<hr>
 
  								{{#each users}}
- 								<div class="row">
- 								 	<div class="col-4" style="width:33%; height:100%">
- 							
- 									<h3>{{@index}}.</h3>	 		
- 								 	</div>
- 								 	<div class="col-4" style="width:33%; height:100%">
- 								 		<h2 style="text-align:center">{{firstName}}</h2>
- 								 	</div>
- 								 	<div class="col-4" style="width:33%; height:100%">
- 								 		<h2 style="text-align:right">{{userRating}}<img src="images/star.ico" height="7%" width="7%"></h2> 
- 								 		
- 								 	</div>
- 								</div>
- 								{{/each}}
+								<div class="row">
+									<div class="col-2" style="width:20%">
+										<h3>{{@index}}.</h3>
+									</div>
+									<div class="col-3" style="width: 40%">
+										<h2 style="text-align:center">{{userName}}</h2>
+									</div>
+									<div class="col-2" style="width:20%">
+										<h2 style="text-align:center">{{numberOfJobs}}</h2>
+
+									</div>
+									<div class="col-2" style="width: 20%">
+										<h2 style="text-align:right">{{userRating}}<img src="images/star.ico" height="7%" width="7%"></h2>
+									</div>
+								</div>
+								{{/each}}
  								<hr>
 							</div>
 						
@@ -94,7 +96,6 @@
 			</div>
 
 		<!-- Scripts -->
-		   
 
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
@@ -103,6 +104,7 @@
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
+
 
 	</body>
 </html>
