--- a/backend/src/main/resources/templates/tracking.html
+++ b/backend/src/main/resources/templates/tracking.html
@@ -22,15 +22,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">repup</a></h1>
+						<h1><a href="../static/index.html">repup</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index">Home</a></li>
-											<li><a href="generic">Tracking</a></li>
+											<li><a href="/">Home</a></li>
+											<li><a href="tracking">Progress Tracking</a></li>
 											<li><a href="leaderboard">Leaderboard</a></li>
 											<li><a href="elements">Elements</a></li>
 											<li><a href="#">Sign Up</a></li>
@@ -53,14 +53,13 @@
 							<div class="inner">
  								<h2>Work being done right now</h2>
  								<hr>
- 								{{#jobs}}
+ 								{{#each jobs}}
  								<div class="row">
- 								    <div class="col-4">
- 										<img src="icons/pers1.png" width="50%" height="50%"></img>
-
- 										<h3 style="width:200px;height:100%;overflow-wrap:break-word;">{{firstName}} is doing</h3>
+ 								    <div class="col-3">
+ 										<img src="{{profilePhoto}}" width="30%" height="30%"/>
+ 										<h3 style="width:200px;height:50%;overflow-wrap:break-word;">{{userName}}</h3>
  									</div>
- 									<div class="col-4">
+ 									<div class="col-3">
  										<div class="container">
 								  			<div class="loader">
 								    			<div class="circle">&nbsp;</div>
@@ -71,15 +70,17 @@
 
 										</div>
 									</div>
-									<div class="col-4">
-									<br>
-
-									 <h3>{{lastName}}</h3>
+									<div class="col-3">
+										{{complete}}
 									</div>
+									<div class="col-3">
+										{{rating}}
+									</div>
+
  								<!-- <h3> ............................................</h3> -->
  								
  								</div>
- 								{{/jobs}}
+ 								{{/each}}
 
  								<hr>
 							</div>
