--- a/backend/src/main/resources/templates/leaderboard.html
+++ b/backend/src/main/resources/templates/leaderboard.html
@@ -57,7 +57,7 @@
  								{{#each users}}
 								<div class="row">
 									<div class="col-2" style="width:20%">
-										<h3>{{@index}}.</h3>
+										<h3>{{inc @index}}.</h3>
 									</div>
 									<div class="col-3" style="width: 40%">
 										<h2 style="text-align:center">{{userName}}</h2>
