--- a/backend/src/main/resources/templates/leaderboard.html
+++ b/backend/src/main/resources/templates/leaderboard.html
@@ -53,7 +53,24 @@
 							<div class="inner">
  								<h2 style="text-align:center">Leaderboard</h2>
  								<hr>
+								<div class="row" style="margin-top:-4%; margin-bottom:-5%">
+									<div class="col-3" style="width:20%">
+										<h4 style="text-align:left">Position</h4>
+									</div>
+									<div class="col-3" style="width:40%">
+										<h4 style="text-align:center">Name</h4>
+									</div>
+									<div class="col-3" style="width:20%">
+										<h4 style="text-align:center">Jobs done</h4>
+									</div>
+									<div class="col-3" style="width:20%">
+										<h4 style="text-align:right">Rating</h4>
+									</div>
+								
+								
+								</div>
 
+								<hr>
  								{{#each users}}
 								<div class="row">
 									<div class="col-2" style="width:20%">
