--- a/backend/src/main/resources/templates/tracking.html
+++ b/backend/src/main/resources/templates/tracking.html
@@ -22,14 +22,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="../static/index.html">repup</a></h1>
+						<h1><a href="../index.html">repup</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="/">Home</a></li>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="tracking">Progress Tracking</a></li>
 											<li><a href="leaderboard">Leaderboard</a></li>
 											<li><a href="elements">Elements</a></li>
