Fixing UI job title length overflow

--- a/backend/src/main/resources/templates/tracking.html
+++ b/backend/src/main/resources/templates/tracking.html
@@ -73,7 +73,7 @@
 									</div>
 									<div class="col-4" style=":width:25%">
 										<br>
-										<h3 style="text-align:right">{{jobName}}</h3>
+										<h3 style="text-align:right;width:200px;height:50%;overflow-wrap:break-word">{{jobName}}</h3>
 									</div>
 
  								<!-- <h3> ............................................</h3> -->
